gccida/c1/lookup_page_table_entry
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_page_table_entry/src/ggc-page.c:881:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 * lookup_page_table_entry( const void *p) 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_page_table_entry/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_page_table_entry/src/ggc-page.c:883:29: error: expected expression
return ( *( page_entry_0 ***)( ( char *)G.lookup + ( ( ( unsigned __int64)p >> 21) & 0x7F8)))[( ( unsigned __int64)p >> SLOBYTE( G.lg_pagesize)) & ~( -1 << ( 24 - LOBYTE( G.lg_pagesize)))]; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_page_table_entry/src/ggc-page.c:883:13: error: use of undeclared identifier 'page_entry_0'
return ( *( page_entry_0 ***)( ( char *)G.lookup + ( ( ( unsigned __int64)p >> 21) & 0x7F8)))[( ( unsigned __int64)p >> SLOBYTE( G.lg_pagesize)) & ~( -1 << ( 24 - LOBYTE( G.lg_pagesize)))]; 
            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_page_table_entry/src/obj/ggc-page.o] Error 1
